--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+:root {
+    --primaryColor: #5fb7e8;
+    --primaryRGBA: rgba(0, 0, 0, 0.3);
+    --mainGrey: #fafafa;
+    --darkGrey: #5f5e5e;
+    --mainWhite: #fff;
+    --mainBlack: #222;
+    --mainTransition: all 0.3s ease-in-out;
+    --mainSpacing: 0.3rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: sans-serif !important;
+    background: var(--mainGrey) !important;
+    color: var(--mainBlack);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text-title {
+    font-weight: bold;
+    letter-spacing: var(--mainSpacing);
+    text-transform: capitalize;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text-main {
+    color: var(--primaryColor);
 }
 
-.App-link {
-  color: #61dafb;
+.main-link {
+    padding: 0.5rem 1rem;
+    background: var(--primaryColor);
+    color: var(--mainWhite);
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: var(--mainSpacing);
+    outline: 2px solid var(--primaryColor);
+    outline-offset: 4px;
+    border: none;
+    transition: var(--mainTransition);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-link:hover {
+    background-color: var(--darkGrey);
+    text-decoration: none;
+    color: var(--primaryColor);
+    outline-color: var(--darkGrey);
+}
+
+.cart-icon {
+    cursor: pointer;
 }
